--- a/google style login form/index.html
+++ b/google style login form/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form</title>
+</head>
+    <link rel="stylesheet" href="style.css">
+<body>
+    <div class="login-form">
+        <form class="form">
+            <h1 class="form-title">Login</h1>
 
+            <div class="form-div">
+                <input type="text" class="form-input" placeholder=" ">
+                <label for="" class="form-label">Email</label>
+            </div>
+
+            <div class="form-div">
+                <input type="password" class="form-input" placeholder=" ">
+                <label for="" class="form-label">Password</label>
+            </div>
+
+            <input type="submit" class="form-button" value="Login">
+        </form>
+    </div>
+</body>
+</html>
